[package]
name = "crankstart"
version = "0.1.1"
authors = ["Rob Tsuk <rob@tsuk.com>"]
edition = "2018"
description = "A barely functional, wildly incomplete and basically undocumented Rust crate whose aim is to let you write games for the [Playdate handheld gaming system](https://play.date) in [Rust](https://www.rust-lang.org)."
license = "MIT"
repository = "https://github.com/pd-rs/crankstart"

[package.metadata.cargo-xbuild]
memcpy = false
sysroot_path = "target/sysroot"
panic_immediate_abort = false

[profile.dev]
panic = "abort"
opt-level = 2
lto = true

[profile.release]
panic = "abort"
opt-level = 'z'
lto = true

[workspace]
members = [
    "crankstart-sys",
]

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"
crate-type = ["staticlib", "cdylib"]

[[example]]
name = "life"
path = "examples/life.rs"
crate-type = ["staticlib", "cdylib"]

[[example]]
name = "sprite_game"
path = "examples/sprite_game.rs"
crate-type = ["staticlib", "cdylib"]

[dependencies]
anyhow = { version = "1.0.31", default-features = false }
euclid = { version = "0.20.13", default-features = false, features = [ "libm" ] }
hashbrown = "0.7.2"
heapless = "0.5.5"
crankstart-sys = { version = "0.1.1", path = "crankstart-sys" }

[dev-dependencies]
randomize = "3.0.1"
enum-iterator = "0.6.0"
rand = { version = "0.8.4", default-features = false, features = [ "alloc" ] }
rand_pcg = "0.3.1"

[dependencies.cstr_core]
version = "=0.1.2"
default-features = false
features = [ "alloc" ]

