[package]
name = "crankstart-sys"
version = "0.1.0"
authors = ["Rob Tsuk <robtsuk@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = { version = "0.20.13", default-features = false, features = [ "libm" ] }
